[tool.poetry]
name = "recsys-mvp"
version = "0.1.0"
description = ""
authors = ["Khanh Minh <minhjohn4@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.11.9"
datasets = "^2.21.0"
pandas = "^2.2.2"
loguru = "^0.7.2"
mlflow = "^2.16.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
evidently = "^0.4.37"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
feast = {extras = ["postgres"], version = "^0.40.1"}
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"
torch = "^2.4.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"